--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@capacitor/ios": "4.4.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/qr-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
